--- a/style.css
+++ b/style.css
@@ -176,10 +176,20 @@ button {
 #exit-fullscreen {
   position: absolute;
   top: 10px;
-  right: 10px;
-  font-size: 2rem;
-  background: none;
+  left: 10px;
+  font-size: 1.2rem;
+  background: transparent;
   border: none;
-  color: white;
+  color: var(--text-color);
+  cursor: pointer;
+  z-index: 20;
+  display: none; /* hidden by default */
 }
+
+/* Show only when in fullscreen */
+:fullscreen #exit-fullscreen,
+:-webkit-full-screen #exit-fullscreen {
+  display: block;
+}
+
 
