--- a/style.css
+++ b/style.css
@@ -173,6 +173,19 @@ button {
   max-height: 100%;
 }
 
+:fullscreen #army-image,
+:-webkit-full-screen #army-image {
+  display: block;
+  max-width: 100%;
+  max-height: 100vh;
+  margin: auto;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
 #exit-fullscreen {
   position: absolute;
   top: 10px;
