--- a/style.css
+++ b/style.css
@@ -234,5 +234,18 @@ button {
   display: none;
 }
 
+/* Button pressed effect */
+.variation-buttons button:active {
+  transform: scale(0.97);
+  box-shadow: inset 0 2px 4px rgba(0,0,0,0.3);
+}
+
+/* Visually highlight selected (clicked) button */
+.variation-buttons button.active {
+  background-color: var(--highlight-color);
+  color: black;
+  font-weight: bold;
+  border: 2px solid black;
+}
 
 
