--- a/style.css
+++ b/style.css
@@ -181,25 +181,47 @@ button {
   display: flex;
 }
 
+:fullscreen body,
+:-webkit-full-screen body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin: 0;
+  padding: 0;
+}
+
+:fullscreen .container,
+:-webkit-full-screen .container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100vw;
+  margin: 0;
+  padding: 0;
+}
+
 /* Proper image handling in fullscreen */
 :fullscreen .image-block,
 :-webkit-full-screen .image-block {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100%;
   height: 100%;
+  width: 100%;
 }
 
 :fullscreen #army-image,
 :-webkit-full-screen #army-image {
   object-fit: contain;
-  width: auto;
-  height: auto;
   max-width: 100%;
   max-height: 100%;
-  margin: auto;
+  width: auto;
+  height: auto;
   display: block;
+  margin: auto;
 }
 
 #fullscreen-image {
