--- a/style.css
+++ b/style.css
@@ -181,26 +181,18 @@ button {
   display: flex;
 }
 
-:fullscreen body,
-:-webkit-full-screen body {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  margin: 0;
-  padding: 0;
-}
-
-:fullscreen .container,
-:-webkit-full-screen .container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+:fullscreen .image-block,
+:-webkit-full-screen .image-block {
+  position: fixed;
+  top: 0;
+  left: 0;
   height: 100vh;
   width: 100vw;
-  margin: 0;
-  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: black;
+  z-index: 9999;
 }
 
 /* Proper image handling in fullscreen */
