--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body.light-mode {
   background-size: cover;
   --text-color: #000;
   --button-bg: #FFF5D8;
-  --highlight-color: #3366cc;
+  --highlight-color: #e8e5dc;
 }
 
 body {
