--- a/style.css
+++ b/style.css
@@ -263,7 +263,7 @@ select {
 }
 
 body.light-mode .variation-buttons button:active {
-  background-color: #d4cdb8; /* softer light press color */
+  background-color: #d4cdb8 !important; /* softer light press color */
 }
 
 body.light-mode .map-answer {
