--- a/style.css
+++ b/style.css
@@ -277,6 +277,7 @@ body::before {
   z-index: -1;
   background: url('TankRec_background.png') no-repeat center center;
   background-size: cover;
+  background-attachment: scroll; /* ✅ this locks it visually */
   will-change: transform;
 }
 
